[package]
name = "raytx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "=1.16.27"
solana-sdk = "=1.16.27"
solana-account-decoder = "=1.16.27"
solana-program = "=1.16.27"
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
indicatif = "0.17"

# Raydium dependencies

spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = ["client"], rev = "d10a8e9f" }
common = { git = "https://github.com/raydium-io/raydium-library", rev = "72a22dcd" }

[dev-dependencies]
ctor = "0.2.8"


[features]
slow_tests = []

